--- a/page/MailBox/mailBox.css
+++ b/page/MailBox/mailBox.css
@@ -12,14 +12,43 @@ body{
     display: grid;
     grid-template-columns: repeat(1,0);
     position:   fixed;
-    bottom: 0;
-    right: 0;
-
-
-
-
+    min-width: 200px;
 }
+#newMailButton,#mailReceiveButton,#mailSendButton{
+    min-width: 200px;
+    max-width: 200px;
+}
+.glass-button {
+    margin-bottom: 20px;
+    display: inline-block;
+    padding: 24px 32px;
+    border: 0;
+    text-decoration: none;
+    border-radius: 15px;
+    background-color: rgba(255,255,255,0.1);
+    border: 1px solid rgba(255,255,255,0.1);
+    backdrop-filter: blur(30px);
+    color: rgba(255,255,255,0.8);
+    font-size: 14px;
+    letter-spacing: 2px;
+    cursor: pointer;
+    text-transform: uppercase;
+  }
+ 
+  .glass-button:hover {
+    background-color: rgba(255,255,255,0.2);
+  }
 
+  .glass-panel {
+    min-width: 200px;
+    color: #ffffff;
+    background-color: rgba(255,255,255,0.06);
+    border: 1px solid rgba(255,255,255,0.1);
+    width: 200px;
+    border-radius: 15px;
+    padding: 32px;
+    backdrop-filter: blur(10px);
+  }
 
   
 
