--- a/page/mailBox/mailBox.css
+++ b/page/mailBox/mailBox.css
@@ -1,47 +1,51 @@
 body{
-    background: linear-gradient(to bottom right, rgb(5, 5, 202),7%,rgb(61, 2, 95) );
+  padding: 0px;
+  margin: 0px;
+  background: linear-gradient(to bottom right, rgb(5, 5, 202),7%,rgb(61, 2, 95) );
 }
+
 #menuSearchContainer{
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
-#MenuButton{
-  margin-left: 5px;
+
+#menuButton{
 }
 
 #navMenu{
-  visibility: hidden;
-  margin: 5px;
+  visibility: visible;
 }
+
 #newMailButtonContainer{
   visibility: hidden;
   position: fixed;
-  bottom: 40px;
-  right: 10px;
 }
+
 #receptionBox{
   position: absolute;
   margin: 5px;
   visibility: visible;
 }
+
 #sendedBox{
   position: absolute;
-  margin: 5px;
   visibility: hidden;
 }
+
 #menuSearchContainer{
-  margin: 5px;
 }
+
 #newMail{
-  margin: 5px;
   position: absolute;
-  bottom: 8px;
-  right: 25px;
-  visibility: hidden;
+  visibility: visible;
+  bottom: 0px;
+  right: 0px;
 }
+
 #message{
   border-radius: 5px;
 }
+
 #newMailRecipientClose{
   display: flex;
   flex-direction: row;
@@ -50,56 +54,54 @@ body{
 textarea{
   resize: none;
 }
+
 .newMailClass{
-  margin: 3px;
-  margin-left: 7px;
 }
+
 .glass-panel {
-    background-color: rgba(255,255,255,0.07);
-    border: 1px solid rgba(255,255,255,0.1);
-  }
-  
-  
-  .glass-panel-input {
-    border: 1px solid;
-    border-color: rgba(255, 255, 255, 0);
-    border-radius: 100px;
-    transition: border-color 0.2s;
-    text-align: center;
-  }
-  
-  .glass-panel-input:hover {
-    border-color: rgba(187, 187, 187, 0.4);
-    transition: border-color 0.4s;
-  }
-  
-  .glass-panel-input:focus{
-    outline: none;
-    border-color: rgba(187, 187, 187, 0.4);
-    transition: border-color 0.4s;
-  }
-  
-  
-  .glass-button {
-    border-radius: 100px;
-    background-color: rgba(255,255,255,0.1);
-    border: 0px;
-    backdrop-filter: blur(30px);
-    color: rgba(255,255,255,0.8);
-    letter-spacing: 2px;
-    cursor: pointer;
-    text-transform: uppercase;
-    transition: background-color 0.6s;
-    margin: 10px;
-  }
-  
-  .glass-button:hover {
-    background-color: rgba(255,255,255,0.2);
-    transition: background-color 0.3s;
-  }
-  
-  .glass-button:focus{
-    outline: none;
-    background-color: rgba(255,255,255,0.2);
-    transition: background-color 0.3s;
-  }
+  background-color: rgba(255,255,255,0.07);
+  border: 1px solid rgba(255,255,255,0.1);
+}
+
+.glass-panel-input {
+  border: 1px solid;
+  border-color: rgba(255, 255, 255, 0);
+  border-radius: 100px;
+  transition: border-color 0.2s;
+  text-align: center;
+}
+
+.glass-panel-input:hover {
+  border-color: rgba(187, 187, 187, 0.4);
+  transition: border-color 0.4s;
+}
+
+.glass-panel-input:focus{
+  outline: none;
+  border-color: rgba(187, 187, 187, 0.4);
+  transition: border-color 0.4s;
+}
+
+
+.glass-button {
+  border-radius: 100px;
+  background-color: rgba(255,255,255,0.1);
+  border: 0px;
+  backdrop-filter: blur(30px);
+  color: rgba(255,255,255,0.8);
+  letter-spacing: 2px;
+  cursor: pointer;
+  text-transform: uppercase;
+  transition: background-color 0.6s;
+}
+
+.glass-button:hover {
+  background-color: rgba(255,255,255,0.2);
+  transition: background-color 0.3s;
+}
+
+.glass-button:focus{
+  outline: none;
+  background-color: rgba(255,255,255,0.2);
+  transition: background-color 0.3s;
+}
