--- a/page/mailBox/mailBox.css
+++ b/page/mailBox/mailBox.css
@@ -1,107 +1,49 @@
-body{
-  padding: 0px;
+body {
   margin: 0px;
-  background: linear-gradient(to bottom right, rgb(5, 5, 202),7%,rgb(61, 2, 95) );
+  padding: 0px;
 }
 
-#menuSearchContainer{
+img.iconImage {
+  border-radius: 100px;
+}
+
+header {
   display: flex;
-  flex-direction: row;
 }
 
-#menuButton{
-}
-
-#navMenu{
-  visibility: visible;
-}
-
-#newMailButtonContainer{
-  visibility: hidden;
-  position: fixed;
-}
-
-#receptionBox{
-  position: absolute;
-  margin: 5px;
-  visibility: visible;
-}
-
-#sendedBox{
-  position: absolute;
-  visibility: hidden;
-}
-
-#menuSearchContainer{
-}
-
-#newMail{
-  position: absolute;
-  visibility: visible;
-  bottom: 0px;
-  right: 0px;
-}
-
-#message{
-  border-radius: 5px;
-}
-
-#newMailRecipientClose{
-  display: flex;
-  flex-direction: row;
-}
-
-textarea{
-  resize: none;
-}
-
-.newMailClass{
-}
-
-.glass-panel {
-  background-color: rgba(255,255,255,0.07);
-  border: 1px solid rgba(255,255,255,0.1);
-}
-
-.glass-panel-input {
+input#searchInput {
   border: 1px solid;
   border-color: rgba(255, 255, 255, 0);
   border-radius: 100px;
-  transition: border-color 0.2s;
   text-align: center;
 }
 
-.glass-panel-input:hover {
-  border-color: rgba(187, 187, 187, 0.4);
-  transition: border-color 0.4s;
+section#contentSection {
+  background-color: aqua;
+  display: inline-flex;
 }
 
-.glass-panel-input:focus{
-  outline: none;
-  border-color: rgba(187, 187, 187, 0.4);
-  transition: border-color 0.4s;
+ul#navMenuList {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
 }
 
-
-.glass-button {
-  border-radius: 100px;
-  background-color: rgba(255,255,255,0.1);
-  border: 0px;
-  backdrop-filter: blur(30px);
-  color: rgba(255,255,255,0.8);
-  letter-spacing: 2px;
-  cursor: pointer;
-  text-transform: uppercase;
-  transition: background-color 0.6s;
+li.navMenuListElement section {
+  display: inline-flex;
+  text-align: left;
 }
 
-.glass-button:hover {
-  background-color: rgba(255,255,255,0.2);
-  transition: background-color 0.3s;
+section#mailListSection {
+  background-color: blue;
 }
 
-.glass-button:focus{
-  outline: none;
-  background-color: rgba(255,255,255,0.2);
-  transition: background-color 0.3s;
+section.mail {
+  display: inline-flex;
+}
+
+section#newMailSection {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
 }
