All corrections' update before v1

--- a/page/admin/panel.css
+++ b/page/admin/panel.css
@@ -8,3 +8,8 @@ section{
     border: 2px solid black;
     border-radius: 10px;
 }
+
+section#showUserInfo section{
+    display: flex;
+    border: none;
+}
